# Choice-Intelligence-Analytics-Platform

./: .env.example  .gitignore  README.md  pyproject.toml  scraper_config.json
config/: settings.py
dashboard/backend/: db.py  main.py  schemas.py
dashboard/frontend/: api_client.py  app.py  styles.py
dashboard/nextjs/: package-lock.json  package.json  tsconfig.tsbuildinfo
docs/: TECHNICAL.md  USER_MANUAL.md
migrations/: 001_create_database.sql  002_create_categories.sql  003_create_platforms.sql  004_create_platform_config.sql  005_create_handles.sql  006_create_posts.sql  007_create_comments.sql  008_create_engagement_metrics.sql  009_create_scraping_config.sql  010_create_sync_watermarks.sql  011_create_dead_letter_queue.sql  012_create_content_deletions.sql  013_create_handle_watermarks.sql  014_deduplicate_posts.sql  015_add_post_collection_days.sql
scripts/: cleanup_qdrant_duplicates.py  security_test.py  start.sh  stop.sh
src/config_loader/: __init__.py  loader.py
src/db/: __init__.py  migrations.py  upsert.py  validators.py
src/pipeline/: __init__.py  chunker.py  deletion_worker.py  dlq.py  embedder.py  main.py  platform_guard.py  processor.py  update_handler.py  watermark.py
src/scraper/: base_adapter.py  config_validator.py  cooling.py  credential_checker.py  handle_processor.py  language_detector.py  logger.py  main.py  models.py  orchestrator.py  registry.py  retry.py  url_normalizer.py
src/vector_db/: __init__.py  collection.py  delete.py  indexes.py  search.py  upsert.py
tests/integration/: __init__.py  test_deletion_propagation_sla.py  (+4 more)
(+40 files in other folders)
